# exam-helper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
exam_helper/: __init__.py  __main__.py  config.py  db.py  gui.py  main.py  models.py
exam_helper/providers/: __init__.py  base.py  webium.py
